# blog-emsdk-magnum-viewer

./: .gitignore  CMakeLists.txt  CNAME  LICENSE  README.md  conanfile.txt  configure.h.in  lockfile.json  viewer.js  viewer.wasm
.conan/: settings.yml
.conan/profiles/: emscripten  emsdk
.conan/recipes/libjpeg/all/: conanfile.py
.conan/recipes/magnum/all/: conanfile.py
.github/workflows/: emscripten.yml
viewer/: CMakeLists.txt  application.html  main.cpp
